--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1080,6 +1080,7 @@
   "process_editor.configuration_panel_actions_set_server_action_info": "Angir at handlingen knyttes til neste oppgave i arbeidsflyten.",
   "process_editor.configuration_panel_actions_set_server_action_label": "Knytt handlingen til neste oppgave.",
   "process_editor.configuration_panel_actions_title": "Handlinger",
+  "process_editor.configuration_panel_change_pdf_service_task_filename": "Filnavn for PDF",
   "process_editor.configuration_panel_change_task_id": "Oppgave-ID",
   "process_editor.configuration_panel_confirmation_task": "Oppgave: Bekreftelse",
   "process_editor.configuration_panel_custom_receipt_accordion_header": "Kvittering",
@@ -1126,7 +1127,9 @@
   "process_editor.configuration_panel_no_task_message": "Velg en oppgave i diagrammet til venstre for å se detaljer om valgt oppgave.",
   "process_editor.configuration_panel_no_task_title": "Du har ikke valgt noen oppgave",
   "process_editor.configuration_panel_payment_task": "Oppgave: Betaling",
+  "process_editor.configuration_panel_pdf_task": "Systemoppgave: PDF",
   "process_editor.configuration_panel_policy_title": "Tilganger",
+  "process_editor.configuration_panel_set_auto_pdf_tasks": "Oppgaver for automatisk PDF-generering",
   "process_editor.configuration_panel_set_data_model": "Datamodell: {{dataModelName}}",
   "process_editor.configuration_panel_set_data_model_label": "Datamodell",
   "process_editor.configuration_panel_set_data_model_link": "Legg til datamodell",
