--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -24,6 +24,9 @@
   "api_errors.Unauthorized": "Handlingen du prøver å utføre krever rettigheter du ikke har. Du blir nå logget ut.",
   "api_errors.UploadedImageNotValid": "Det opplastede bildet er ikke en gyldig filtype",
   "app_content_library.code_lists.empty": "Det finnes ingen kodelister i biblioteket.",
+  "app_content_library.code_lists.error.duplicate_name": "Det finnes kodelister med samme navn.",
+  "app_content_library.code_lists.error.missing_name": "Én eller flere kodelister mangler navn.",
+  "app_content_library.code_lists.errors": "Kan ikke lagre kodelistene på grunn av følgende feil:",
   "app_content_library.code_lists.name": "Navn",
   "app_content_library.code_lists.page_name": "Kodelister (ny)",
   "app_content_library.code_lists.unnamed": "Uten navn",
@@ -799,6 +802,7 @@
   "not_found_page.heading": "Vi finner ikke siden",
   "not_found_page.redirect_to_dashboard": "Gå tilbake til Dashboard",
   "not_found_page.text": "Vi finner ikke siden du leter etter. Har du skrevet inn riktig URL? \nDu kan prøve å gå tilbake til dashboardet for å sjekke, eller <a>ta kontakt med oss</a> om du trenger hjelp.",
+  "org_content_library.code_lists.commit_message_default": "Oppdatere kodelister",
   "org_content_library.library_heading": "Organisasjonsbiblioteket",
   "overview.activity": "Aktivitet",
   "overview.deployment_log_list_created": "Opprettet {{createdDateTime}} av {{createdBy}}",
