fix: changed the letter of the language to small

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -696,12 +696,12 @@
   "language.mt": "Maltesisk",
   "language.my": "Burmesisk",
   "language.na": "Nauru",
-  "language.nb": "Bokmål",
+  "language.nb": "bokmål",
   "language.nd": "Nord-ndebele",
   "language.ne": "Nepali",
   "language.ng": "Ndonga",
   "language.nl": "Nederlandsk",
-  "language.nn": "Nynorsk",
+  "language.nn": "nynorsk",
   "language.no": "Norsk",
   "language.nr": "Sør-ndebele",
   "language.nv": "Navajo",
@@ -725,7 +725,7 @@
   "language.sa": "Sanskrit",
   "language.sc": "Sardisk",
   "language.sd": "Sindhi",
-  "language.se": "Nordsamisk",
+  "language.se": "nordsamisk",
   "language.sg": "Sango",
   "language.si": "Singalesisk",
   "language.sk": "Slovakisk",
