--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -2,8 +2,10 @@
   "admin.alerts.5xx-failed-requests": "5xx-feil",
   "admin.alerts.server-exceptions": "Serverunntak",
   "admin.alerts.server-response-time": "Treg serverrespons",
+  "admin.alerts.failed-process-next-requests": "Process/next feil",
   "admin.alerts.link": "Se logger i Grafana her",
   "admin.alerts.error": "Kunne ikke hente varslene fra {{env}}. Prøv igjen senere.",
+  "admin.metrics.failed_process_next_requests": "Process/next feil",
   "admin.metrics.altinn_app_lib_correspondence_orders": "Correspondence orders",
   "admin.metrics.altinn_app_lib_data_patched": "Data patched",
   "admin.metrics.altinn_app_lib_instances_completed": "Instances completed",
