--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1,34 +1,14 @@
 {
-  "admin.alerts.5xx-failed-requests": "5xx-feil",
-  "admin.alerts.server-exceptions": "Serverunntak",
-  "admin.alerts.server-response-time": "Treg serverrespons",
   "admin.alerts.failed-process-next-requests": "Process/next feil",
   "admin.alerts.link": "Se logger i Grafana her",
   "admin.alerts.error": "Kunne ikke hente varslene fra {{env}}. Prøv igjen senere.",
+  "admin.metrics.health.heading": "Applikasjonens helse",
+  "admin.metrics.heading": "Applikasjonsmetrikker<time/>",
   "admin.metrics.failed_process_next_requests": "Process/next feil",
-  "admin.metrics.altinn_app_lib_correspondence_orders": "Correspondence orders",
-  "admin.metrics.altinn_app_lib_data_patched": "Data patched",
-  "admin.metrics.altinn_app_lib_instances_completed": "Instances completed",
-  "admin.metrics.altinn_app_lib_instances_created": "Instances created",
-  "admin.metrics.altinn_app_lib_instances_deleted": "Instances deleted",
-  "admin.metrics.altinn_app_lib_instances_duration": "Instances duration",
-  "admin.metrics.altinn_app_lib_maskinporten_altinn_exchange_requests": "Maskinporten Altinn exchange requests",
-  "admin.metrics.altinn_app_lib_maskinporten_token_requests": "Maskinporten token requests",
-  "admin.metrics.altinn_app_lib_notification_orders": "Notification orders",
-  "admin.metrics.altinn_app_lib_processes_duration": "Processes duration",
-  "admin.metrics.altinn_app_lib_processes_ended": "Processes ended",
-  "admin.metrics.altinn_app_lib_processes_started": "Processes started",
-  "admin.metrics.altinn_app_lib_signing_delegation_revokes": "Signing delegation revokes",
-  "admin.metrics.altinn_app_lib_signing_delegations": "Signing delegations",
-  "admin.metrics.altinn_app_lib_signing_notify_signees": "Signing notify signees",
-  "admin.metrics.altinn_app_lib_singing_get_service_owner_party": "Signing get service owner party",
-  "admin.metrics.cpu_usage": "CPU usage",
-  "admin.metrics.error_ratio": "5xx error rate",
-  "admin.metrics.memory_usage": "Memory usage",
-  "admin.metrics.requests_rps": "Request rate",
-  "admin.metrics.slow_requests": "Request latency (p95)",
+  "admin.metrics.altinn_app_lib_processes_started": "Skjemaer startet",
+  "admin.metrics.health": "/health",
+  "admin.metrics.readiness": "Pods readiness",
   "admin.metrics.type": "Metrikk type",
-  "admin.metrics.up": "Availability",
   "ai_assistant.about_assistant": "Om assistenten",
   "ai_assistant.add_attachment": "Last opp vedlegg",
   "ai_assistant.allow_app_changes": "Tillat endringer i appen",
