--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -4,8 +4,10 @@
   "admin.alerts.error": "Kunne ikke hente varslene fra {{env}}. Prøv igjen senere.",
   "admin.metrics.health.heading": "Applikasjonens helse",
   "admin.metrics.heading": "Applikasjonsmetrikker<time/>",
-  "admin.metrics.failed_process_next_requests": "Process/next feil",
-  "admin.metrics.altinn_app_lib_processes_started": "Skjemaer startet",
+  "admin.metrics.failed_process_next_requests": "Antall feilende process/next",
+  "admin.metrics.altinn_app_lib_processes_started": "Antall aktive instanser",
+  "admin.metrics.altinn_app_lib_processes_completed": "Antall fullførte instanser",
+  "admin.metrics.failed_processes_started_requests": "Antall feilende instanser",
   "admin.metrics.health": "/health",
   "admin.metrics.readiness": "Pods readiness",
   "admin.metrics.type": "Metrikk type",
