--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -302,7 +302,7 @@
   "app_settings.setup_tab_switch_onEntry_show_description": "Brukerne får åpne tjenesten med en liste over tidligere eksemplarer de kan velge fra og fortsette på. De kan også velge å opprette et nytt eksemplar.",
   "branch_switch.choose_action": "Velg hva du vil gjøre med endringene dine:",
   "branch_switch.confirm_discard": "Er du sikker på at du vil forkaste alle lokale endringer? Dette kan ikke angres.",
-  "branch_switch.discard_and_switch": "Forkast endringer og bytt branch",
+  "branch_switch.discard_and_switch": "Forkast endringer og bytt gren",
   "branch_switch.discarding": "Forkaster...",
   "branch_switch.uncommitted_changes_message": "Du kan ikke bytte fra {{currentBranch}} til {{targetBranch}} fordi du har ulagrede endringer.",
   "branch_switch.uncommitted_files": "Filer med endringer ({{count}})",
@@ -358,19 +358,19 @@
   "contact.slack.content_list": "<0>bygge appene slik du ønsker</0><0>svare på spørsmål og veilede deg</0><0>ta imot innspill på ny funksjonalitet</0>",
   "contact.slack.heading": "Skriv melding til oss Slack",
   "contact.slack.link": "altinn.slack.com",
-  "create_branch.branch_name_label": "Navn på branch",
+  "create_branch.branch_name_label": "Navn på gren",
   "create_branch.branch_name_placeholder": "f.eks. feature/min-nye-funksjon",
-  "create_branch.button": "Ny branch",
-  "create_branch.create": "Opprett branch",
+  "create_branch.button": "Ny gren",
+  "create_branch.create": "Opprett gren",
   "create_branch.creating": "Oppretter...",
-  "create_branch.description": "Opprett en ny branch basert på gjeldende branch. Du vil automatisk bli byttet til den nye branchen.",
-  "create_branch.error_already_exists": "En branch med dette navnet eksisterer allerede",
-  "create_branch.error_empty": "Branch navn kan ikke være tomt",
-  "create_branch.error_generic": "Kunne ikke opprette branch",
-  "create_branch.error_invalid_chars": "Branch navn inneholder ugyldige tegn",
-  "create_branch.error_invalid_pattern": "Branch navn har ugyldig format",
-  "create_branch.error_reserved_ending": "Branch navn kan ikke slutte med .lock",
-  "create_branch.hint": "Branch navn kan inneholde bokstaver, tall, bindestreker og skråstreker.",
+  "create_branch.description": "Opprett en ny gren basert på gjeldende gren. Du vil automatisk bli byttet til den nye grenen.",
+  "create_branch.error_already_exists": "En gren med dette navnet eksisterer allerede",
+  "create_branch.error_empty": "Grennavn kan ikke være tomt",
+  "create_branch.error_generic": "Kunne ikke opprette gren",
+  "create_branch.error_invalid_chars": "Grennavn inneholder ugyldige tegn",
+  "create_branch.error_invalid_pattern": "Grennavn har ugyldig format",
+  "create_branch.error_reserved_ending": "Grennavn kan ikke slutte med .lock",
+  "create_branch.hint": "Grennavn kan inneholde bokstaver, tall, bindestreker og skråstreker.",
   "dashboard.all_apps": "Alle apper",
   "dashboard.all_data_models": "Alle datamodeller",
   "dashboard.all_resources": "Alle ressurser",
