--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1,15 +1,20 @@
 {
-  "admin.alerts.failed-process-next-requests": "Process/next feil",
+  "admin.alerts.failed-process-next-requests-alert": "Feilende process/next",
+  "admin.alerts.failed-instances-post-requests-alert": "Feilende instansieringer",
+  "admin.alerts.failed-health-requests-alert": "Feilende helsesjekker",
   "admin.alerts.link": "Se logger i Grafana her",
   "admin.alerts.error": "Kunne ikke hente varslene fra {{env}}. Prøv igjen senere.",
-  "admin.metrics.health.heading": "Applikasjonens helse",
-  "admin.metrics.heading": "Applikasjonsmetrikker<time/>",
-  "admin.metrics.failed_process_next_requests": "Antall feilende process/next",
   "admin.metrics.altinn_app_lib_processes_started": "Antall aktive instanser",
   "admin.metrics.altinn_app_lib_processes_completed": "Antall fullførte instanser",
-  "admin.metrics.failed_processes_started_requests": "Antall feilende instanser",
-  "admin.metrics.health": "/health",
-  "admin.metrics.readiness": "Pods readiness",
+  "admin.metrics.failed_health_requests": "Antall feilende helsesjekker",
+  "admin.metrics.failed_process_next_requests": "Antall feilende process/next",
+  "admin.metrics.failed_processes_started_requests": "Antall feilende instansieringer",
+  "admin.metrics.time_window": "Tidsvindu",
+  "admin.metrics.heading": "Metrikker",
+  "admin.metrics.app.heading": "Applikasjonsmetrikker",
+  "admin.metrics.feil.heading": "Applikasjonsfeil",
+  "admin.metrics.health.heading": "Applikasjonenshelse",
+  "admin.metrics.ready_pods": "Pods klare",
   "admin.metrics.type": "Metrikk type",
   "ai_assistant.about_assistant": "Om assistenten",
   "ai_assistant.add_attachment": "Last opp vedlegg",
