add translations to admin view and no. of apps

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1,4 +1,30 @@
 {
+  "admin.apps.name": "Navn",
+  "admin.apps.search": "Søk i apper",
+  "admin.apps.title": "Publiserte apper",
+  "admin.apps.version": "Versjon",
+  "admin.environment.at22": "Test — AT22",
+  "admin.environment.at23": "Test — AT23",
+  "admin.environment.at24": "Test — AT24",
+  "admin.environment.production": "Produksjon",
+  "admin.environment.tt02": "Test",
+  "admin.environment.yt01": "Test — YT01",
+  "admin.instances.archive_reference": "Arkivreferanse",
+  "admin.instances.archive_reference_validation": "Må være en gyldig instans-ID eller arkivreferanse.",
+  "admin.instances.created": "Opprettet",
+  "admin.instances.fetch_more": "Last inn 10 flere rader",
+  "admin.instances.filter.all": "Alle",
+  "admin.instances.filter.no": "Nei",
+  "admin.instances.filter.yes": "Ja",
+  "admin.instances.id": "Id",
+  "admin.instances.process_task": "Prosessteg",
+  "admin.instances.status": "Status",
+  "admin.instances.status.active": "Aktiv",
+  "admin.instances.status.completed": "Levert av bruker",
+  "admin.instances.status.confirmed": "Bekreftet mottatt",
+  "admin.instances.status.deleted": "Slettet",
+  "admin.instances.status.unread": "Ulest",
+  "admin.instances.title": "Instanser",
   "ai_assistant.about_assistant": "Om assistenten",
   "ai_assistant.add_attachment": "Last opp vedlegg",
   "ai_assistant.allow_app_changes": "Tillat endringer i appen",
