Replace grafana alerts with metrics

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1,13 +1,12 @@
 {
-  "admin.alerts.failed-process-next-requests-alert": "Feilende process/next",
-  "admin.alerts.failed-instances-post-requests-alert": "Feilende instansieringer",
-  "admin.alerts.failed-health-requests-alert": "Feilende helsesjekker",
+  "admin.alerts.failed_process_next_requests": "{{count}} feilende process/next",
+  "admin.alerts.failed_instances_requests": "{{count}} feilende instansieringer",
   "admin.alerts.link": "Se logger i Grafana her",
-  "admin.alerts.error": "Kunne ikke hente varslene fra {{env}}. Prøv igjen senere.",
+  "admin.alerts.error": "Kunne ikke hente metrikkene fra {{env}}. Prøv igjen senere.",
   "admin.metrics.altinn_app_lib_processes_started": "Antall aktive instanser",
   "admin.metrics.altinn_app_lib_processes_completed": "Antall fullførte instanser",
   "admin.metrics.failed_process_next_requests": "Antall feilende process/next",
-  "admin.metrics.failed_processes_started_requests": "Antall feilende instansieringer",
+  "admin.metrics.failed_instances_requests": "Antall feilende instansieringer",
   "admin.metrics.time_window": "Tidsvindu",
   "admin.metrics.heading": "Metrikker",
   "admin.metrics.app.heading": "Applikasjonsmetrikker",
