--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1509,6 +1509,7 @@
   "ux_editor.component_properties.compact": "Bruk kompakt visning",
   "ux_editor.component_properties.componentRef": "ID på komponenten det gjelder (componentRef)",
   "ux_editor.component_properties.config_is_expression_message": "Denne egenskapen er konfigurert som et uttrykk, og kan foreløpig ikke redigeres her.",
+  "ux_editor.component_properties.crop_card.delete_confirm_message": "Er du sikker på at du vil slette oppsettet til beskjæringen?",
   "ux_editor.component_properties.crop_card.title": "Form og størrelse",
   "ux_editor.component_properties.crop_circle": "Sirkel",
   "ux_editor.component_properties.crop_description": "Vi anbefaler ikke større enn 270 piksler for å ta hensyn til mobilvisning.",
