Remove token from studio gateway settings

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -2,7 +2,7 @@
   "admin.alerts.failed_process_next_requests": "{{count}} feilende process/next",
   "admin.alerts.failed_instances_requests": "{{count}} feilende instansieringer",
   "admin.alerts.link": "Se logger i Grafana her",
-  "admin.alerts.error": "Kunne ikke hente metrikkene fra {{env}}. Prøv igjen senere.",
+  "admin.alerts.error": "Kunne ikke hente metrikker fra {{env}}. Prøv igjen senere.",
   "admin.apps.name": "Navn",
   "admin.apps.search": "Søk i apper",
   "admin.apps.title": "Publiserte apper",
