Add events on publishing page

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -140,6 +140,7 @@
   "app_deployment.deploy_more_options_menu_label": "Åpne meny med tilgang til miljø og mulighet for avpublisering",
   "app_deployment.error": "Kunne ikke laste inn statusen og aktiviteten for denne appen. Prøv igjen senere.",
   "app_deployment.error_unknown.message": "Det har oppstått en ukjent feil ved avpublisering av appen, prøv igjen om litt. Hvis problemet fortsetter, <a>ta kontakt med oss</a>",
+  "app_deployment.events": "Events",
   "app_deployment.last_published": "Sist publisert {{lastPublishedDate}}.",
   "app_deployment.loading": "Laster inn statusen og aktiviteten for denne appen...",
   "app_deployment.missing_rights": "Du har ikke rettigheter til å publisere til {{envTitle}}. Be eierne i {{orgName}} om å gi deg tilgang.",
@@ -178,6 +179,7 @@
   "app_deployment.table.build_log_expired_link": "Utløpt",
   "app_deployment.table.deployed_by_col": "Publisert av",
   "app_deployment.table.deployed_version_history_empty": "Det er ingen publiseringshistorikk i {{envTitle}}",
+  "app_deployment.table.events": "Hendelser",
   "app_deployment.table.status": "Status",
   "app_deployment.table.version_col": "Versjon",
   "app_deployment.technical_error_1": "Vi har en teknisk feil og får ikke publisert appen din. Publiser på nytt nå, eller prøv igjen senere. Hvis problemet fortsetter, <a>ta kontakt med oss</a>.",
