chore: Replace generic cards with studio config card (#17184)

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -558,6 +558,7 @@
   "general.close": "Lukk",
   "general.close_item": "Lukk {{item}}",
   "general.component": "Komponent",
+  "general.confirm.delete": "Er du sikker på at du vil slette?",
   "general.contact": "Kontakt og hjelp",
   "general.create_new": "Lag ny",
   "general.data_model": "datamodell",
@@ -1608,6 +1609,7 @@
   "ux_editor.component_properties.enum_week": "Uke",
   "ux_editor.component_properties.enum_year": "År",
   "ux_editor.component_properties.excludedChildren": "Komponenter som ikke skal være med i gruppens oppsummering",
+  "ux_editor.component_properties.false": "Usann",
   "ux_editor.component_properties.filter": "Filter",
   "ux_editor.component_properties.forceShowInSummary": " Vis alltid feltet i oppsummeringer",
   "ux_editor.component_properties.format": "Format",
@@ -1765,6 +1767,7 @@
   "ux_editor.component_properties.taskId": "Oppgave-ID",
   "ux_editor.component_properties.timeStamp": "Inkluder tidsstempel i dato (på som standard)",
   "ux_editor.component_properties.triggers": "Feltet skal utløse:",
+  "ux_editor.component_properties.true": "Sann",
   "ux_editor.component_properties.type": "Type",
   "ux_editor.component_properties.unit": "Enhet",
   "ux_editor.component_properties.url": "Lenke (URL)",
