Replace time to range + clean up

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -2,9 +2,11 @@
   "admin.alerts.failed_process_next_requests": "{{count}} feilende process/next",
   "admin.alerts.failed_instances_requests": "{{count}} feilende instansieringer",
   "admin.alerts.link": "Se logger i Grafana her",
-  "admin.alerts.error": "Kunne ikke hente metrikker fra {{env}}. Prøv igjen senere.",
+  "admin.alerts.error": "Kunne ikke hente varsler fra {{env}}. Prøv igjen senere.",
+  "admin.alerts.pending": "Laster inn varsler fra {{env}}...",
   "admin.apps.name": "Navn",
   "admin.apps.search": "Søk i apper",
+  "admin.apps.alerts": "Varsler siste",
   "admin.apps.title": "Publiserte apper",
   "admin.apps.version": "Versjon",
   "admin.environment.at22": "Test — AT22",
@@ -37,7 +39,7 @@
   "admin.metrics.failed_process_next_requests": "Antall feilende process/next",
   "admin.metrics.failed_instances_requests": "Antall feilende instansieringer",
   "admin.metrics.time_window": "Tidsvindu",
-  "admin.metrics.heading": "Metrikker",
+  "admin.metrics.heading": "Metrikker siste",
   "admin.metrics.app.heading": "Applikasjonsmetrikker",
   "admin.metrics.feil.heading": "Applikasjonsfeil",
   "admin.metrics.health.heading": "Applikasjonenshelse",
