Fix loading/error statuses

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -2,8 +2,8 @@
   "admin.alerts.failed_process_next_requests": "{{count}} feilende process/next",
   "admin.alerts.failed_instances_requests": "{{count}} feilende instansieringer",
   "admin.alerts.link": "Se logger i Grafana her",
-  "admin.alerts.error": "Kunne ikke hente varsler fra {{env}}. Prøv igjen senere.",
-  "admin.alerts.pending": "Laster inn varsler fra {{env}}...",
+  "admin.alerts.error": "Kunne ikke hente varsler. Prøv igjen senere.",
+  "admin.alerts.pending": "Laster inn varsler...",
   "admin.apps.name": "Navn",
   "admin.apps.search": "Søk i apper",
   "admin.apps.alerts": "Varsler siste",
