chore: added help text for Text component (#17124) <!--- Provide a general summary of your changes in the Title above -->
## Description

The Tekst component did not have a
help text. The explanatory text was created with Magnus and Lars. We may need to shorten or adapt it later.

## Verification

- [ ] Related issues are connected (if applicable)
- [ ] **Your** code builds clean without any errors or warnings
- [ ] Manual testing done (required)
- [ ] Relevant automated test added (if you find this hard, leave it and we'll help out)

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1485,6 +1485,7 @@
   "ux_editor.component_help_text.Subform": "Bruk Tabell for underskjema når du vil legge inn et underskjema i hovedskjemaet ditt.",
   "ux_editor.component_help_text.Summary2": "Med denne komponenten kan du legge til en oppsummering av det brukerne har fylt ut, på slutten av skjemaet.",
   "ux_editor.component_help_text.TextArea": "Du bruker Stort tekstfelt når du vil at brukerne skal skrive litt lengre tekst.",
+  "ux_editor.component_help_text.Text": "Du bruker Tekst når du vil at brukerne skal kunne vise frem data i tekstformat, for eksempel når brukeren har valgt et alternativ fra en nedtrekksliste.",
   "ux_editor.component_help_text.default": "Ingen informasjon å vise om denne komponenten.",
   "ux_editor.component_help_text_general_title": "Åpne hjelpetekst for komponenten",
   "ux_editor.component_other_properties_hide_many_settings": "Skjul flere innstillinger",
