add spacing to modals and text improvements

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -338,9 +338,10 @@
   "branch_switch.confirm_discard": "Er du sikker på at du vil forkaste alle lokale endringer? Dette kan ikke angres.",
   "branch_switch.discard_and_switch": "Forkast endringer og bytt gren",
   "branch_switch.discarding": "Forkaster...",
-  "branch_switch.uncommitted_changes_message": "Du kan ikke bytte fra {{currentBranch}} til {{targetBranch}} fordi du har ulagrede endringer.",
+  "branch_switch.uncommitted_changes_message": "Du kan ikke bytte gren fra <strong>{{currentBranch}}</strong> til <strong>{{targetBranch}}</strong> fordi du har ulagrede endringer.",
   "branch_switch.uncommitted_files": "Filer med endringer ({{count}})",
   "branching.select_branch": "Velg gren",
+  "branching.uncommited_changes_dialog.uncommited_changes": "Ulagrede endringer",
   "code_list_editor.add_button_disabled": "Du kan ikke ha flere enn to alternativer i en boolsk kodeliste",
   "code_list_editor.add_option": "Legg til alternativ",
   "code_list_editor.column_title_delete": "Slett",
@@ -398,7 +399,7 @@
   "create_branch.button": "Ny gren",
   "create_branch.create": "Opprett gren",
   "create_branch.creating": "Oppretter...",
-  "create_branch.description": "Opprett en ny gren basert på gjeldende gren. Du vil automatisk bli byttet til den nye grenen.",
+  "create_branch.description": "Lag en ny gren basert på gjeldende gren. Du vil automatisk bli byttet til den nye grenen.",
   "create_branch.error_already_exists": "En gren med dette navnet eksisterer allerede",
   "create_branch.error_empty": "Grennavn kan ikke være tomt",
   "create_branch.error_generic": "Kunne ikke opprette gren",
