--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -334,20 +334,27 @@
   "app_settings.setup_tab_switch_messageBoxConfig_hideSettings_hideAlways_description": "Alle eksemplarene av tjenesten blir skjult i innboksen. Eksemplarene er tilgjengelig via API. ",
   "app_settings.setup_tab_switch_onEntry_show": "Vis en liste over eksemplarer brukerne har startet på",
   "app_settings.setup_tab_switch_onEntry_show_description": "Brukerne får åpne tjenesten med en liste over tidligere eksemplarer de kan velge fra og fortsette på. De kan også velge å opprette et nytt eksemplar.",
-  "branch_switch.choose_action": "Velg hva du vil gjøre med endringene dine:",
-  "branch_switch.confirm_discard": "Er du sikker på at du vil forkaste alle lokale endringer? Dette kan ikke angres.",
-  "branch_switch.discard_and_switch": "Forkast endringer og bytt gren",
-  "branch_switch.discarding": "Forkaster...",
-  "branch_switch.uncommitted_changes_message": "Du kan ikke bytte gren fra <strong>{{currentBranch}}</strong> til <strong>{{targetBranch}}</strong> fordi du har ulagrede endringer.",
-  "branch_switch.uncommitted_files": "Filer med endringer ({{count}})",
+  "branching.new_branch_dialog.branch_name_label": "Navn på gren",
+  "branching.new_branch_dialog.branch_name_placeholder": "f.eks. feature/min-nye-funksjon",
+  "branching.new_branch_dialog.create": "Opprett gren",
+  "branching.new_branch_dialog.creating": "Oppretter...",
+  "branching.new_branch_dialog.description": "Lag en ny gren basert på gjeldende gren. Du vil automatisk bli byttet til den nye grenen.",
+  "branching.new_branch_dialog.error_already_exists": "En gren med dette navnet eksisterer allerede",
+  "branching.new_branch_dialog.error_empty": "Grennavn kan ikke være tomt",
+  "branching.new_branch_dialog.error_generic": "Kunne ikke opprette gren",
+  "branching.new_branch_dialog.error_invalid_chars": "Grennavn inneholder ugyldige tegn",
+  "branching.new_branch_dialog.error_invalid_pattern": "Grennavn har ugyldig format",
+  "branching.new_branch_dialog.error_reserved_ending": "Grennavn kan ikke slutte med .lock",
+  "branching.new_branch_dialog.hint": "Grennavn kan inneholde bokstaver, tall, bindestreker og skråstreker.",
+  "branching.new_branch_dialog.trigger": "Ny gren",
   "branching.select_branch": "Velg gren",
+  "branching.uncommited_changes_dialog.alert": "Du kan ikke bytte gren fra <strong>{{currentBranch}}</strong> til <strong>{{targetBranch}}</strong> fordi du har ulagrede endringer.",
+  "branching.uncommited_changes_dialog.choose_action": "Velg hva du vil gjøre med endringene dine:",
+  "branching.uncommited_changes_dialog.confirm_discard": "Er du sikker på at du vil forkaste alle lokale endringer? Dette kan ikke angres.",
+  "branching.uncommited_changes_dialog.discard_and_switch": "Forkast endringer og bytt gren",
+  "branching.uncommited_changes_dialog.discarding": "Forkaster...",
   "branching.uncommited_changes_dialog.uncommited_changes": "Ulagrede endringer",
-  "code_list_editor.add_button_disabled": "Du kan ikke ha flere enn to alternativer i en boolsk kodeliste",
-  "code_list_editor.add_option": "Legg til alternativ",
-  "code_list_editor.column_title_delete": "Slett",
-  "code_list_editor.column_title_description": "Beskrivelse",
-  "code_list_editor.column_title_help_text": "Hjelpetekst",
-  "code_list_editor.column_title_label": "Ledetekst",
+  "branching.uncommited_changes_dialog.uncommitted_files": "Filer med endringer ({{count}})",
   "code_list_editor.column_title_value": "Kode",
   "code_list_editor.delete_code_list_item": "Slett kode nummer {{number}}",
   "code_list_editor.description_item": "Beskrivelse for kode nummer {{number}}",
@@ -394,19 +401,6 @@
   "contact.slack.content_list": "<0>bygge appene slik du ønsker</0><0>svare på spørsmål og veilede deg</0><0>ta imot innspill på ny funksjonalitet</0>",
   "contact.slack.heading": "Skriv melding til oss Slack",
   "contact.slack.link": "altinn.slack.com",
-  "create_branch.branch_name_label": "Navn på gren",
-  "create_branch.branch_name_placeholder": "f.eks. feature/min-nye-funksjon",
-  "create_branch.button": "Ny gren",
-  "create_branch.create": "Opprett gren",
-  "create_branch.creating": "Oppretter...",
-  "create_branch.description": "Lag en ny gren basert på gjeldende gren. Du vil automatisk bli byttet til den nye grenen.",
-  "create_branch.error_already_exists": "En gren med dette navnet eksisterer allerede",
-  "create_branch.error_empty": "Grennavn kan ikke være tomt",
-  "create_branch.error_generic": "Kunne ikke opprette gren",
-  "create_branch.error_invalid_chars": "Grennavn inneholder ugyldige tegn",
-  "create_branch.error_invalid_pattern": "Grennavn har ugyldig format",
-  "create_branch.error_reserved_ending": "Grennavn kan ikke slutte med .lock",
-  "create_branch.hint": "Grennavn kan inneholde bokstaver, tall, bindestreker og skråstreker.",
   "dashboard.all_apps": "Alle apper",
   "dashboard.all_data_models": "Alle datamodeller",
   "dashboard.all_resources": "Alle ressurser",
