update texts based on feedback

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -338,22 +338,22 @@
   "branching.new_branch_dialog.branch_name_placeholder": "f.eks. feature/min-nye-funksjon",
   "branching.new_branch_dialog.create": "Opprett gren",
   "branching.new_branch_dialog.creating": "Oppretter...",
-  "branching.new_branch_dialog.description": "Lag en ny gren basert på gjeldende gren. Du vil automatisk bli byttet til den nye grenen.",
+  "branching.new_branch_dialog.description": "Lag en ny gren basert på den du har åpen nå. Du blir automatisk byttet til den nye grenen.",
   "branching.new_branch_dialog.error_already_exists": "En gren med dette navnet eksisterer allerede",
   "branching.new_branch_dialog.error_empty": "Grennavn kan ikke være tomt",
   "branching.new_branch_dialog.error_generic": "Kunne ikke opprette gren",
   "branching.new_branch_dialog.error_invalid_chars": "Grennavn inneholder ugyldige tegn",
   "branching.new_branch_dialog.error_invalid_pattern": "Grennavn har ugyldig format",
   "branching.new_branch_dialog.error_reserved_ending": "Grennavn kan ikke slutte med .lock",
-  "branching.new_branch_dialog.hint": "Grennavn kan inneholde bokstaver, tall, bindestreker og skråstreker.",
+  "branching.new_branch_dialog.hint": "Navn på grener kan ha bokstaver, tall, bindestreker og skråstreker.",
   "branching.new_branch_dialog.trigger": "Ny gren",
   "branching.select_branch": "Velg gren",
-  "branching.uncommited_changes_dialog.alert": "Du kan ikke bytte gren fra <strong>{{currentBranch}}</strong> til <strong>{{targetBranch}}</strong> fordi du har ulagrede endringer.",
+  "branching.uncommited_changes_dialog.alert": "Du har endringer som ikke er lagret, og kan ikke bytte gren fra <strong>{{currentBranch}}</strong> til <strong>{{targetBranch}}</strong>.",
   "branching.uncommited_changes_dialog.choose_action": "Velg hva du vil gjøre med endringene dine:",
   "branching.uncommited_changes_dialog.confirm_discard": "Er du sikker på at du vil forkaste alle lokale endringer? Dette kan ikke angres.",
-  "branching.uncommited_changes_dialog.discard_and_switch": "Forkast endringer og bytt gren",
-  "branching.uncommited_changes_dialog.discarding": "Forkaster...",
-  "branching.uncommited_changes_dialog.uncommited_changes": "Ulagrede endringer",
+  "branching.uncommited_changes_dialog.discard_and_switch": "Slett endringene og bytt gren",
+  "branching.uncommited_changes_dialog.discarding": "Sletter endringer...",
+  "branching.uncommited_changes_dialog.heading": "Du har endringer som ikke er lagret",
   "branching.uncommited_changes_dialog.uncommitted_files": "Filer med endringer ({{count}})",
   "code_list_editor.column_title_value": "Kode",
   "code_list_editor.delete_code_list_item": "Slett kode nummer {{number}}",
