add back accidentally deleted text keys

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -355,6 +355,12 @@
   "branching.uncommited_changes_dialog.discarding": "Sletter endringer...",
   "branching.uncommited_changes_dialog.heading": "Du har endringer som ikke er lagret",
   "branching.uncommited_changes_dialog.uncommitted_files": "Filer med endringer ({{count}})",
+  "code_list_editor.add_button_disabled": "Du kan ikke ha flere enn to alternativer i en boolsk kodeliste",
+  "code_list_editor.add_option": "Legg til alternativ",
+  "code_list_editor.column_title_delete": "Slett",
+  "code_list_editor.column_title_description": "Beskrivelse",
+  "code_list_editor.column_title_help_text": "Hjelpetekst",
+  "code_list_editor.column_title_label": "Ledetekst",
   "code_list_editor.column_title_value": "Kode",
   "code_list_editor.delete_code_list_item": "Slett kode nummer {{number}}",
   "code_list_editor.description_item": "Beskrivelse for kode nummer {{number}}",
