fix misspelled text keys

--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -348,13 +348,13 @@
   "branching.new_branch_dialog.hint": "Navn på grener kan ha bokstaver, tall, bindestreker og skråstreker.",
   "branching.new_branch_dialog.trigger": "Ny gren",
   "branching.select_branch": "Velg gren",
-  "branching.uncommited_changes_dialog.alert": "Du har endringer som ikke er lagret, og kan ikke bytte gren fra <strong>{{currentBranch}}</strong> til <strong>{{targetBranch}}</strong>.",
-  "branching.uncommited_changes_dialog.choose_action": "Velg hva du vil gjøre med endringene dine:",
-  "branching.uncommited_changes_dialog.confirm_discard": "Er du sikker på at du vil forkaste alle lokale endringer? Dette kan ikke angres.",
-  "branching.uncommited_changes_dialog.discard_and_switch": "Slett endringene og bytt gren",
-  "branching.uncommited_changes_dialog.discarding": "Sletter endringer...",
-  "branching.uncommited_changes_dialog.heading": "Du har endringer som ikke er lagret",
-  "branching.uncommited_changes_dialog.uncommitted_files": "Filer med endringer ({{count}})",
+  "branching.uncommitted_changes_dialog.alert": "Du har endringer som ikke er lagret, og kan ikke bytte gren fra <strong>{{currentBranch}}</strong> til <strong>{{targetBranch}}</strong>.",
+  "branching.uncommitted_changes_dialog.choose_action": "Velg hva du vil gjøre med endringene dine:",
+  "branching.uncommitted_changes_dialog.confirm_discard": "Er du sikker på at du vil slette alle lokale endringer? Dette kan ikke angres.",
+  "branching.uncommitted_changes_dialog.discard_and_switch": "Slett endringene og bytt gren",
+  "branching.uncommitted_changes_dialog.discarding": "Sletter endringer...",
+  "branching.uncommitted_changes_dialog.heading": "Du har endringer som ikke er lagret",
+  "branching.uncommitted_changes_dialog.uncommitted_files": "Filer med endringer ({{count}})",
   "code_list_editor.add_button_disabled": "Du kan ikke ha flere enn to alternativer i en boolsk kodeliste",
   "code_list_editor.add_option": "Legg til alternativ",
   "code_list_editor.column_title_delete": "Slett",
