--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -56,10 +56,13 @@
   "app_content_library.code_lists.error.duplicate_name": "Det finnes kodelister med samme navn.",
   "app_content_library.code_lists.error.missing_name": "Én eller flere kodelister mangler navn.",
   "app_content_library.code_lists.errors": "Kan ikke lagre kodelistene på grunn av følgende feil:",
+  "app_content_library.code_lists.latest_version": "Siste versjon: {{version}}",
   "app_content_library.code_lists.name": "Navn",
   "app_content_library.code_lists.page_name": "Kodelister (ny)",
   "app_content_library.code_lists.publish": "Publiser",
+  "app_content_library.code_lists.publish_new_version": "Publiser ny versjon",
   "app_content_library.code_lists.unnamed": "Uten navn",
+  "app_content_library.code_lists.unpublished": "Ikke publisert",
   "app_content_library.code_lists_with_text_resources.add_new_code_list": "Legg til kodeliste",
   "app_content_library.code_lists_with_text_resources.code_list_delete": "Slett kodeliste",
   "app_content_library.code_lists_with_text_resources.code_list_delete_confirm": "Er du sikker på at du vil slette kodelisten {{codeListTitle}}? Alt innholdet i kodelisten vil bli fjernet.",
