--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -335,7 +335,7 @@
   "app_settings.setup_tab_switch_onEntry_show": "Vis en liste over eksemplarer brukerne har startet på",
   "app_settings.setup_tab_switch_onEntry_show_description": "Brukerne får åpne tjenesten med en liste over tidligere eksemplarer de kan velge fra og fortsette på. De kan også velge å opprette et nytt eksemplar.",
   "branching.new_branch_dialog.branch_name_label": "Navn på gren",
-  "branching.new_branch_dialog.branch_name_placeholder": "f.eks. feature/min-nye-funksjon",
+  "branching.new_branch_dialog.branch_name_placeholder": "F.eks. feature/min-nye-funksjon",
   "branching.new_branch_dialog.create": "Opprett gren",
   "branching.new_branch_dialog.creating": "Oppretter...",
   "branching.new_branch_dialog.description": "Lag en ny gren basert på <strong>{{currentBranch}}</strong>. Du blir automatisk byttet til den nye grenen.",
@@ -348,10 +348,11 @@
   "branching.new_branch_dialog.hint": "Navn på grener kan ha bokstaver, tall, bindestreker og skråstreker.",
   "branching.new_branch_dialog.trigger": "Ny gren",
   "branching.select_branch": "Velg gren",
-  "branching.uncommitted_changes_dialog.alert": "Du har endringer som ikke er lagret, og kan ikke bytte gren fra <strong>{{currentBranch}}</strong> til <strong>{{targetBranch}}</strong>.",
-  "branching.uncommitted_changes_dialog.choose_action": "Velg hva du vil gjøre med endringene dine:",
-  "branching.uncommitted_changes_dialog.confirm_discard": "Er du sikker på at du vil slette alle lokale endringer? Dette kan ikke angres.",
-  "branching.uncommitted_changes_dialog.discard_and_switch": "Slett endringene og bytt gren",
+  "branching.uncommitted_changes_dialog.alert": "Du har endringer på grenen <strong>{{currentBranch}}</strong> som ikke er delt. Du kan ikke bytte til <strong>{{targetBranch}}</strong> før du har delt eller slettet endringene.",
+  "branching.uncommitted_changes_dialog.cancel": "Nei, avbryt",
+  "branching.uncommitted_changes_dialog.choose_action": "Ønsker du å slette endringene dine og bytte gren?",
+  "branching.uncommitted_changes_dialog.confirm_discard": "Du sletter nå alle endringene dine på denne grenen. Du kan ikke gjenopprette dem.",
+  "branching.uncommitted_changes_dialog.discard_and_switch": "Ja, slett endringene",
   "branching.uncommitted_changes_dialog.discarding": "Sletter endringer...",
   "branching.uncommitted_changes_dialog.heading": "Du har endringer som ikke er lagret",
   "branching.uncommitted_changes_dialog.uncommitted_files": "Filer med endringer ({{count}})",
