--- a/src/Designer/frontend/language/src/nb.json
+++ b/src/Designer/frontend/language/src/nb.json
@@ -1,6 +1,4 @@
 {
-  "admin.alerts.failed_process_next_requests": "{{count}} feilende process/next",
-  "admin.alerts.failed_instances_requests": "{{count}} feilende instansieringer",
   "admin.alerts.link": "Se logger her",
   "admin.alerts.error": "Kunne ikke hente varsler. Prøv igjen senere.",
   "admin.alerts.pending": "Laster inn varsler...",
@@ -34,16 +32,19 @@
   "admin.instances.status.deleted": "Slettet",
   "admin.instances.status.unread": "Ulest",
   "admin.instances.title": "Instanser",
-  "admin.metrics.altinn_app_lib_processes_started": "Antall aktive instanser",
-  "admin.metrics.altinn_app_lib_processes_completed": "Antall fullførte instanser",
-  "admin.metrics.failed_process_next_requests": "Antall feilende process/next",
-  "admin.metrics.failed_instances_requests": "Antall feilende instansieringer",
+  "admin.metrics.altinn_app_lib_processes_started": "aktive instanser",
+  "admin.metrics.altinn_app_lib_processes_completed": "fullførte instanser",
+  "admin.metrics.failed_process_next_requests": "feilende process/next",
+  "admin.metrics.failed_instances_requests": "feilende instansieringer",
   "admin.metrics.time_window": "Tidsvindu",
-  "admin.metrics.heading": "Metrikker siste",
-  "admin.metrics.app.heading": "Applikasjonsmetrikker",
-  "admin.metrics.feil.heading": "Applikasjonsfeil",
-  "admin.metrics.health.heading": "Applikasjonenshelse",
-  "admin.metrics.ready_pods": "Pods klare",
+  "admin.metrics.heading": "Statistikk fra siste",
+  "admin.metrics.health.error": "Kunne ikke laste inn applikasjonenshelse for denne appen. Prøv igjen senere.",
+  "admin.metrics.health.loading": "Laster inn applikasjonenshelse for denne appen...",
+  "admin.metrics.errors.error": "Kunne ikke laste inn applikjasjonsfeil for denne appen. Prøv igjen senere.",
+  "admin.metrics.errors.loading": "Laster inn applikjasjonsfeil for denne appen...",
+  "admin.metrics.app.error": "Kunne ikke laste inn applikasjonsmetrikker for denne appen. Prøv igjen senere.",
+  "admin.metrics.app.loading": "Laster inn applikasjonsmetrikker for denne appen...",
+  "admin.metrics.ready_pods": "av podene er klare",
   "admin.metrics.type": "Metrikk type",
   "ai_assistant.about_assistant": "Om assistenten",
   "ai_assistant.add_attachment": "Last opp vedlegg",
